--- a/history.tex
+++ b/history.tex
@@ -77,8 +77,8 @@ the other most popular today being Con\TeX{}t.
 
 Development continues,
 both in the form of user-provided packages for \TeX{} and \LaTeX{},
-and on improvements to the \TeX{} typesetting program itself.
-Currently, there are four versions, or \introduce{engines}:
+and as improvements to the \TeX{} typesetting program itself.
+There are four versions, or \introduce{engines}:
 \begin{description}
 \item[\TeX] is the original system by Donald Knuth.
 Knuth stopped adding features after version 3.0 in March~1990,
@@ -103,8 +103,7 @@ The most recent version, 3.14159265, came out in January~2014.
 \item[\XeTeX] is a further extension of \TeX{} that adds native support for
     Unicode and OpenType.
     It was originally developed by Jonathan Kew in the early 2000s,
-    and gained full cross-platform support and inclusion in the \TeX{} Live
-    distribution in 2007.\punckern\endnote{Jonathan Kew,
+    and gained full cross-platform support in 2007.\punckern\endnote{Jonathan Kew,
     ``\XeTeX{} Live''\quotekern, \textit{TUGboat} 29, no.~1 (2007)}
 
 \item[\LuaTeX] is similar to \XeTeX{} in its native Unicode and modern font support.
@@ -136,8 +135,8 @@ so present-day distributions use another program,
 pdf\TeX{} and \XeTeX{} are built by combining the result with other C
 and \cpp{} sources.
 Instead of following this complicated process,
-the \LuaTeX{} authors hand-translated Knuth's Pascal into C
-and have been using the resulting code since 2009.\punckern\endnote{%
+the \LuaTeX{} authors hand-translated Knuth's Pascal into C.
+They have used the resulting code since 2009.\punckern\endnote{%
 Taco Hoekwater, \textit{\LuaTeX{} says goodbye to Pascal}
 (MAPS 39, Euro\TeX{} 2009),
 \https{www.tug.org/TUGboat/tb30-3/tb96hoekwater-pascal.pdf}}
