--- a/installation.tex
+++ b/installation.tex
@@ -1,15 +1,15 @@
 \chapter{Installation}
 \label{installation}
 
-You install \LaTeX{} on your computer by downloading a \introduce{distribution}.
+You install \LaTeX{} on your computer from a \introduce{distribution}.
 It comes with:
 \begin{enumerate}
 \item \LaTeX, the program---the thing that typesets text files into
     documents.\footnote{We'll actually install multiple \LaTeX{} programs,
     but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
-    Packages are pieces of code that you place in your documents to
-    do all sorts of things, like change their style or add new commands.
+    Packages are pieces of code that do all sorts of things,
+    like provide new commands or change a document's style.
     We'll see lots of them in action throughout this book.
 \item Miscellaneous tools, such as editors.
 \end{enumerate}
@@ -44,15 +44,15 @@ Each major operating system has its own \LaTeX{} distribution:
 \section{Editors}
 
 Since \LaTeX{} source files are regular text files,
-you're free to create them with the usual choices of Vim, Emacs,
+you're free to create them with the usual choices, like Vim, Emacs,
 Sublime, Notepad\plusplus, and so on.\punckern\footnote{If you have never used
 any of these, try a few.
 They're popular among programmers and other folks who shuffle text around
 screens all day. Just don't use Notepad. Life is too short.}
 There are also editors designed specifically for \LaTeX{},
 which often come with their own built-in \acronym{pdf} viewer.
-You can find a fairly comprehensive list on the \LaTeX{} Wikibook,
-in its installation chapter. (See Appendix~\ref{resources}.)
+(You can find a fairly comprehensive list on the \LaTeX{} Wikibook,
+in its installation chapter. See Appendix~\ref{resources}.)
 
 \section{Online options}
 
@@ -60,5 +60,5 @@ If you'd rather not install \LaTeX{} on your computer,
 you can try online editors such as Share\LaTeX{} and Overleaf.
 This book won't focus on these web-based tools,
 but almost all of the same basics apply.
-(Of course, you have less control over certain aspects of online versions,
-like available fonts, the version of \LaTeX{} that's used, and so on.)
+Of course, you have less control over certain aspects of online versions,
+like available fonts, the version of \LaTeX{} that's used, and so on.
