--- a/math.tex
+++ b/math.tex
@@ -4,9 +4,9 @@
 \LaTeX{} excels at typesetting mathematics, both in body text,
 e.g., $x_n^2+y_n^2=r^2$, and as standalone formulas:
 \[\sum_{n=0}^{\infty} \frac{f^{(n)} (a)}{n!} (x - a)^n\]
-The former is created with \verb|$...$| or \verb|\(...\)|,
-and the latter with \verb|\[...\]|.
-Inside these math environments, the rules of \LaTeX{} change:
+The former is typed inside \verb|$...$| or \verb|\(...\)|,
+and the latter within \verb|\[...\]|.
+In these math environments, the rules of \LaTeX{} change:
 \begin{itemize}
 \item Most spaces and line breaks are ignored,
     and spacing decisions are made for you based on
@@ -35,10 +35,9 @@ it decent coverage would take up half of this book.
 Given how wide the field of mathematics is,
 there are \emph{many} different commands and environments.
 Here, more so than any other topic,
-you owe it to yourself to find some real references and learn what the system
+you owe it to yourself to find some real references and learn what \LaTeX{}
 is capable of.
-Before moving on, though, let's show some examples of what \LaTeX{}
-can do.
+Before moving on, though, let's show some examples of what it can do.
 \newpage
 
 \begin{enumerate}
