--- a/punctuation.tex
+++ b/punctuation.tex
@@ -10,7 +10,7 @@ and there's more to it than your keyboard suggests.
 
 \section{Quotation marks}
 
-\LaTeX{} doesn't automatically convert ``straight'' quotes
+\LaTeX{} doesn't automatically convert \texttt{"}straight\texttt{"} quotes
 into correctly-facing ``curly'' ones:
 \begin{leftfigure}
 \begin{lstlisting}
@@ -46,7 +46,7 @@ quotes a former \acronym{us} president as,
 Though they look similar,
 hyphens (\,-\,), en dashes (\,--\,),
 em dashes (\,---\,), and minus signs (\,$-$\,)
-serve different purposes:
+serve different purposes.
 \begin{description}
 \item[Hyphens] have a few applications:\endnote{Matthew Butterick,
     ``Hyphens and dashes''\quotekern,
@@ -64,7 +64,7 @@ serve different purposes:
         It's clearer that I mean the latter when typeset as
         \emph{five-dollar bills}.
     \end{itemize}
-    In \LaTeX{}, they are produced with the hyphen key (\,\texttt{-}\,).
+    Unsurprisingly, they are produced with the hyphen key (\,\texttt{-}\,).
 
 \item[En dashes] are for ranges such as ``pages 4--12''\quotekern,
     and connected word terms, like the \mbox{``US--Canada} border''\quotekern.
@@ -79,8 +79,8 @@ serve different purposes:
     mathematical expressions.
     They are similar in length to an en dash,
     but sit at a different height.
-    Minus signs are set with the hyphen key when in a math environment
-    (see \chapref{math}), or with \verb|\textminus|.
+    Minus signs are set with \verb|\textminus|, or with the hyphen key when in
+    a math environment (see \chapref{math}).
 \end{description}
 
 \section{Ellipses}
@@ -101,7 +101,7 @@ I'm\dots{} not sure.
 
 \section{Spacing}
 
-As we discovered in our first example,
+As we discovered in \chapref{hello},
 \LaTeX{} inserts more space between periods and whatever
 follows them---presumably the start of the next sentence.
 This isn't always what we want!
