--- a/micro.tex
+++ b/micro.tex
@@ -65,8 +65,8 @@ character widths are altered by no more than two percent.\punckern\footnote{%
 Of course, you can use package options to change this limit,
 or disable the feature entirely.}
 
-That this feature isn't currently available for \XeLaTeX{}.
-You must use \LuaLaTeX{} to take advantage of it.
+This feature isn't currently available for \XeLaTeX{}.
+You'll need to use \LuaLaTeX{} if you'd like to take advantage of it.
 
 \section{What next?}
 
