--- a/structure.tex
+++ b/structure.tex
@@ -20,9 +20,9 @@ The area between the \verb|\documentclass| command and the start of the
 Here, we perform any setup we need---such as importing packages
 and defining commands---to control how our document
 will look.
+
 As mentioned in \chapref{installation},
-\introduce{packages} are bits of code that modify your document
-in interesting ways.
+\introduce{packages} contain code to modify your document in interesting ways.
 The ones found in your \LaTeX{} distribution come from the Comprehensive \TeX{}
 Archive Network, or \acronym{ctan},\punckern\footnote{Curious readers may
 be wondering what \TeX{} is, and how it differs from \LaTeX.
@@ -35,7 +35,7 @@ We won't discuss how to use plain \TeX{} here. That's for another book---the
 \TeX book.}
 at \https{ctan.org}.
 Package manuals are also found there,
-so it should be your first stop when learning how to use one.
+so make it your first stop when learning how to use one.
 
 To import a package, add a \verb|\usepackage| command,
 with the package's name as its argument.
@@ -101,8 +101,8 @@ Goodbye!
 \end{document}
 \end{lstlisting}
 \end{leftfigure}
-Some levels may not be available depending on the document class
-you've chosen. Chapters, for example, only appear in books.
+Some levels are only available in certain document classes---chapters,
+for example, only appear in books.
 And don't go too crazy with these commands.
 Most works only benefit from a few levels of hierarchy.
 
