--- a/back.tex
+++ b/back.tex
@@ -85,10 +85,8 @@ His revival is based on roman type by
 punchcutter Claude Garamond.
 Italics are inspired by the work of Garamond's contemporary Robert Granjon.
 
-Monospaced items are set in \texttt{Fira Mono},
-originally designed for Mozilla
-by Erik Spiekermann and Ralph du~Carrois.
-The Fira family draws from Spiekermann's past work on FF~Meta.
+Monospaced items are set in \texttt{Drive Mono},
+designed by Elliott Amblard and Jérémie Hornus at Black Foundry.
 
 Captions use
 \href{http://www.fontbureau.com/NHG/}{\textsf{\small Neue Haas Grotesk}},
