Indent by one lead; another read-through

--- a/history.tex
+++ b/history.tex
@@ -9,12 +9,12 @@ Knuth is perhaps most famous for his ongoing magnum opus,
 \textit{The~Art of Computer Programming}.
 
 When the first volume of \acronym{taocp} was released in 1968,
-it was printed the way most books had been since the turn of the century:
+it was printed the same way most books had been since the turn of the century:
 with \introduce{hot metal} type.
-Each individual letter was cast from molten lead,
-then arranged into its line.
+Letters were cast from molten lead,
+then arranged into lines.
 These lines were clamped together to form pages,
-which were finally inked and pressed against paper.
+which were inked and pressed against paper.
 
 By March of 1977, Knuth was ready for a second run of \acronym{taocp}, volume~2,
 but he was horrified when he received the proofs.
