--- a/micro.tex
+++ b/micro.tex
@@ -1,8 +1,8 @@
 \chapter{Microtypography}
 \label{microtype}
 
-\introduce{Microtypography} is the use of small, subliminal tweaks to improve
-a document's legibility.
+\introduce{Microtypography} is the craft of improving a document's legibility
+with small, subliminal tweaks.
 In other words, it is
 \begin{quote}
 [\dots]the art of enhancing the appearance and readability of a
