--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -170,7 +170,7 @@ One nice feature of \texttt{multicol} is that you can
 combine arbitrary layouts.
 \begin{multicols}{2}
 This example starts with one column,
-then sets a short section as two.
+then sets the following section as two.
 The \texttt{multicols} environment splits the text
 inside it so that each column is about the same height.
 \end{multicols}
@@ -183,7 +183,7 @@ One nice feature of {\lt multicol} is that you can
 combine arbitrary layouts.
 \begin{multicols}{2}
 This example starts with one column,
-then sets a short section as two.
+then sets the following section as two.
 The \mbox{\lt multicols} environment splits the text
 inside it so that each column is about the same height.
 \end{multicols}
