--- a/structure.tex
+++ b/structure.tex
@@ -62,9 +62,7 @@ Like other commands, \verb|\usepackage| accepts optional arguments.
 The \texttt{geometry} package, for instance,
 takes your desired paper size and margins.
 For \acronym{us}~\textsc{l}etter paper with one-inch margins,
-you type:\footnote{Notice
-that command arguments can be spaced in whatever way is most convenient to you,
-so long as there are no empty lines between arguments.}
+you type:
 \begin{leftfigure}
 \begin{lstlisting}
 \usepackage[letterpaper,
@@ -72,6 +70,9 @@ so long as there are no empty lines between arguments.}
            ]{geometry}
 \end{lstlisting}
 \end{leftfigure}
+Notice
+that command arguments can be spaced however you like,
+so long as there are no empty lines between arguments.
 
 \section{Titles, sections, and other hierarchy}
 
