--- a/why.tex
+++ b/why.tex
@@ -18,7 +18,7 @@ work.\punckern\endnote{Erik Spiekermann, ``Type is Visible Language''
 %\\ abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz
 \begin{leftfigure}
 \fontspec{TeX Gyre Termes}\fontsize{12bp}{24bp}\selectfont\raggedright
-Typography is why this sentence evokes memories of awful essays
+Typography is why these lines evoke memories of awful essays
 you wrote in school.
 Do many books look this way? Why not?
 \end{leftfigure}
