--- a/hello.tex
+++ b/hello.tex
@@ -23,15 +23,15 @@ but throughout this book, we'll always use the newest ones:
 \LuaLaTeX{} and \XeLaTeX.\punckern\footnote{See Appendix~\ref{history} for a
 comparison of all current \LaTeX{} engines.}
 
-If you are using a \LaTeX{}-specific editor, it probably contains a drop-down
-menu or some other means to select the engine you'd like to use,
-as well as a button to generate your document.
-Otherwise, from a terminal,\punckern\footnote{How to work a terminal emulator,
-making sure the newly-installed \LaTeX{} programs are in your \texttt{PATH},
+If you are using a \LaTeX{}-specific editor, it probably contains some method
+(like a drop-down menu) to select the engine you'd like to use,
+along with a button to generate your document.
+Otherwise, run the following from your terminal:\footnote{%
+How to work a terminal emulator,
+make sure the newly-installed \LaTeX{} programs are in your \texttt{PATH},
 and so on are all outside the scope of this book.
 As is tradition, the leading dollar sign in examples just denotes a console
 prompt, and shouldn't actually be typed.}
-run the following:
 \begin{leftfigure}
 \begin{lstlisting}
 $ xelatex hello.tex
