--- a/punctuation.tex
+++ b/punctuation.tex
@@ -68,12 +68,13 @@ serve different purposes.
 
 \item[En dashes] are for ranges such as ``pages 4--12''\quotekern,
     and connected word terms, like the \mbox{``US--Canada} border''\quotekern.
-    They are set with two adjacent hyphens (\,\texttt{--}\,).
+    \LaTeX{} will place one wherever it sees two adjacent hyphens
+    (\,\texttt{--}\,).
 
 \item[Em dashes] can be used to separate clauses of a sentence.
     Other punctuation---like parenthesis or commas---play a similar
     role.
-    They are set with three hyphens (\,\texttt{---}\,).
+    They are typeset with three hyphens (\,\texttt{---}\,).
 
 \item[Minus signs] are used for negative quantities and
     mathematical expressions.
