Try heavier weights of Drive Mono

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -76,14 +76,14 @@
     Scale=MatchLowercase,
     UprightFeatures={
         SizeFeatures={
-            {Size={-10}, Font=TRY_DriveMono-Book},
-            {Size={10-}, Font=TRY_DriveMono-Regular},
+            {Size={-10}, Font=TRY_DriveMono-Medium},
+            {Size={10-}, Font=TRY_DriveMono-Book},
         },
     },
     ItalicFeatures={
         SizeFeatures={
-            {Size={-10}, Font=TRY_DriveMono-BookItalic},
-            {Size={10-}, Font=TRY_DriveMono-Italic},
+            {Size={-10}, Font=TRY_DriveMono-MediumItalic},
+            {Size={10-}, Font=TRY_DriveMono-BookItalic},
         },
     },
     BoldFont=TRY_DriveMono-Bold,
@@ -346,6 +346,9 @@ Changes since the last proof include:
 \item We've settled on Drive Mono.
     (A completely random sample of my coworkers voted for it unanimously over
     Fira Mono.)
+\item Heavier weight of Drive Mono were used
+    (Book for body and Medium for footnotes, instead of
+    Regular for body and Book for footnotes).
 \end{itemize}
 \vfill
 
