--- a/latex-book.tex
+++ b/latex-book.tex
@@ -71,18 +71,19 @@
 
 \setmonofont[
     Numbers=SlashedZero,
+    Scale=0.76,
     % Scaling Fira to the lowercase size of body text makes it a _touch_
     % too thin. That scale is about 0.74, so bump it a few percent and try that.
     UprightFeatures={
         SizeFeatures={
-            {Size={-10}, Scale=MatchLowercase, Font=FiraMono-Medium},
-            {Size={10-}, Scale=0.76, Font=FiraMono-Regular},
+            {Size={-10}, Font=FiraMono-Medium},
+            {Size={10-}, Font=FiraMono-Regular},
         },
     },
     BoldFeatures={
         SizeFeatures={
-            {Size={-10}, Scale=MatchLowercase, Font=FiraMono-Bold},
-            {Size={10-}, Scale=0.76, Font=FiraMono-Bold},
+            {Size={-10}, Font=FiraMono-Bold},
+            {Size={10-}, Font=FiraMono-Bold},
         },
     },
 ]{Fira Mono}
