Fix space under figures
Apparently \vspace* propagates to the next page, which messes up the
upper margin.

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -227,16 +227,16 @@
 % Indent code examples, etc., by double the text size.
 \newenvironment{leftfigure}
   {\par\vspace{0.5\baselineskip minus 0.3\baselineskip}\begin{adjustwidth}{22pt}{0pt}}
-  {\end{adjustwidth}\vspace*{0.5\baselineskip minus 0.3\baselineskip}}
+  {\end{adjustwidth}\vspace{0.5\baselineskip minus 0.3\baselineskip}}
 
 % Like the above, but with no adjustwidth
 \newenvironment{flushleftfigure}
   {\par\vspace{0.5\baselineskip minus 0.3\baselineskip}\noindent\ignorespacesafterend}
-  {\vspace*{0.5\baselineskip minus 0.3\baselineskip}\par\noindent\ignorespacesafterend}
+  {\vspace{0.5\baselineskip minus 0.3\baselineskip}\par\noindent\ignorespacesafterend}
 
 \newenvironment{centerfigure}
   {\par\vspace{0.5\baselineskip minus 0.3\baselineskip}\begin{adjustwidth}{22pt}{22pt}\centering}
-  {\end{adjustwidth}\vspace*{0.5\baselineskip minus 0.3\baselineskip}}
+  {\end{adjustwidth}\vspace{0.5\baselineskip minus 0.3\baselineskip}}
 
 \usepackage{graphicx}
 
