--- a/latex-book.tex
+++ b/latex-book.tex
@@ -12,6 +12,7 @@
 % We're aiming for 80-ish characters per line.
 \usepackage[a5paper,
             inner=0.6in,outer=0.6in,top=0.75in,bottom=0.5in,
+            footnotesep=11pt,
             footskip=3em,
             includefoot,
            ]{geometry}
