Fix some overflow

--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -118,8 +118,9 @@ then indents lines that follow:
 \begin{leftfigure}
 \begin{lstlisting}
 \begin{description}
-\item[Alan Turing] was a British mathematician who laid much
-    of the groundwork for the field of computer science.
+\item[Alan Turing] was a British mathematician who
+    laid much of the groundwork for the field
+    of computer science.
     He is perhaps most remembered for his model of
     computation, the Turing machine.
 \item[Edsger Dijkstra] was a Dutch computer scientist.
@@ -136,8 +137,9 @@ gives us
 \begin{leftfigure}
 \lm%
 \begin{description}[leftmargin=*]
-\item[\lm Alan Turing] was a British mathematician who laid much
-    of the groundwork for the field of computer science.
+\item[\lm Alan Turing] was a British mathematician who
+    laid much of the groundwork for the field
+    of computer science.
     He is perhaps most remembered for his model of computation,
     the Turing machine.
 \item[\lm Edsger Dijkstra] was a Dutch computer scientist.
@@ -225,9 +227,9 @@ KOMA~Script options, or with the \texttt{parskip} package.
 \item Align text with tab stops using the \texttt{tabbing} environment.
 \item Customize footnote symbols and layout with the
     \texttt{footmisc} package and KOMA~Script.
-\item Insert horizontal and vertical space with commands like
+\item Create horizontal and vertical space with commands such as
     \verb|\vspace|, \verb|\hspace|, \verb|\vfill|, and \verb|\hfill|.
 \item Learn what units \LaTeX{} provides for specifying spacing. \\
-    (We've already mentioned a few here, such as
+    (We've already mentioned a few here, like
     \texttt{pt}, \texttt{bp}, and \texttt{in}.)
 \end{itemize}
