--- a/structure.tex
+++ b/structure.tex
@@ -126,7 +126,7 @@ Consider learning how to:
     and the date using \verb|\maketitle|.
 \item Have \LaTeX{} build you a table of contents
     with \verb|\tableofcontents|.
-\item Control section numbering with \verb|\setcounter{secnumdepth}|
+\item Control section numbers with \verb|\setcounter{secnumdepth}|
 and starred section commands, e.g., \verb|\subsection*{foo}|.
 \item Create auto-updating cross-references with \verb|\label| and \verb|\ref|.
 \item Use KOMA~Script, a set of document classes and packages
