--- a/textformatting.tex
+++ b/textformatting.tex
@@ -18,13 +18,13 @@ gives us
 There are other tools at our disposal:
 \begin{leftfigure}
 \begin{lstlisting}
-We can use \textbf{boldface} or \textsc{small caps} as well.
+We can also use \textbf{boldface} or \textsc{small caps}.
 \end{lstlisting}
 \end{leftfigure}
 with
 \begin{leftfigure}
 \lm%
-We can use \textbf{boldface} or \textsc{small caps} as well.
+We can also use \textbf{boldface} or \textsc{small caps}.
 \end{leftfigure}
 Be judicious in your use of emphasis, especially boldface.
 It excels at drawing the reader's attention away from everything around it,
