--- a/troubleshooting.tex
+++ b/troubleshooting.tex
@@ -6,7 +6,7 @@ Here are some common problems and what you can try to fix them.
 
 \section{Fixing overflow}
 
-\mbox{When \LaTeX{} cannot fit a line into a paragraph with good spacing,
+\mbox{When \LaTeX{} can't fit a line into a paragraph with good spacing,
 it gives up, overflowing} the line into the margin.
 You can sometimes remedy this with some ``emergency stretch''\quotekern.
 When you add \texttt{\textbackslash emergencystretch=\allowbreak<width>}
