Fix indentation of first chapter paragraphs

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -177,7 +177,7 @@
 \setkomafont{section}{\Large\itshape}
 \setkomafont{subsection}{\large\itshape}
 % Don't put big spaces before chapter headings
-\RedeclareSectionCommand[beforeskip=0.15in]{chapter}
+\renewcommand{\chapterheadstartvskip}{\vspace{0.15in}}
 
 \setcapwidth[c]{.75\textwidth}
 %\setcapmargin{0pt}
